# Research-Scraper-Agent

./: Controller.py  Output_Structurer.py  README.md  abstract_summariser.py  agent.py  instruction_parser.py  items_extractor.py  pyproject.toml  requirements-test.txt  requirements.txt  run_tests.py  test_instructions.txt  web_scraper.py
agent_loop.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: __init__.py  conftest.py  test_abstract_summariser.py  test_agent.py  test_controller.py  test_instruction_parser.py  test_items_extractor.py  test_output_structurer.py
